@@ -5,20 +5,22 @@ public class RunApp {
     private User currentUser;
 
 
+
+
     public RunApp(){
         this.currentUser = new User(0, "", "", 0, "", "", "", new ArrayList<>());
     }
 
     Scanner scanner = new Scanner(System.in);
+    AccountManager accountManager = new AccountManager();
 
-
+    BankAccount account = new SavingAccount();
 
     public void start(){
         while (true) {
-            AccountManager accountManager = new AccountManager();
             System.out.println("\n\n===== Welcome to Blue Everest Bank =====");
             System.out.println("MENU: [ CREATE ACCOUNT | LOGIN ]");
-            System.out.print("What would you like to do, type 'c' for create account or 'l' for login: ");
+            System.out.print("To create an account type 'C', or type 'L' to login: ");
             String input = scanner.nextLine().toLowerCase().trim();
 
             if(input.isEmpty()){
@@ -34,16 +36,39 @@ public class RunApp {
 
             while (currentUser.id != 0){
                 welcomeDisplay(input);
-                CheckingAccount ca = (CheckingAccount) currentUser.accountType.get(0);
+                System.out.println("Account Type: " + currentUser.accountType.getFirst().getAccountType());
 
-                System.out.println(">>" + ca.getAccountType());
-                System.out.println("Balance: " +currentUser.accountType.get(0).getBalance());
+//                BankAccount account = new CheckingAccount(25);
+//                if(currentUser.accountType.getFirst().getAccountType().equalsIgnoreCase("checking")){
+//                    account = new CheckingAccount(70);
+//                } else if (currentUser.accountType.getFirst().getAccountType().equalsIgnoreCase("savings")) {
+//                    account = new SavingAccount();
+//                }
+
 
                 loggedInMenuDisplay();
-                String action =handleAction();
+                String action = handleAction();
 
+                //
                 if(action.equals("deposit")){
-                    System.out.println("lol");
+                    double amount;
+                    while (true){
+                        System.out.print("How much would you like to deposit: ");
+
+                        if(scanner.hasNextDouble()){
+                            amount = scanner.nextDouble();
+                            scanner.nextLine();
+                            break;
+                        }else{
+                            scanner.nextLine();
+                            System.out.println("🔶Please type a valid number");
+                        }
+                    }
+
+                    double newBalance = account.deposit(amount);
+                    currentUser.accountType.getFirst().setBalance(newBalance);
+                    System.out.println("Account Type: " + currentUser);
+                    System.out.println("Account Type: " + accountManager.yy);
                 }
 
                 break;
